# NEOOS_KERNEL

./: CMakeLists.txt  LICENSE.md  README.md  compilar  compilar~
grub/: ND_Color.hpp~  NEOOS_Main.c~  kernel.asm~
include/: NEO_Color.h  NEO_Error.h  NEO_IDT.h  NEO_IRQ.h  NEO_Keyboard.h  NEO_Keymap.h  NEO_Mem.h  NEO_Ports.h  NEO_Screen.h  NEO_Types.h
iso/: CMakeLists.txt  CMakeLists.txt~  iso.sh
nextroot/: CMakeLists.txt
src/: CMakeLists.txt  CMakeLists.txt~
src/start/: NEO_Error.cpp  NEO_GDT.cpp  NEO_IDT.cpp  NEO_IRQ.cpp  NEO_ISR.cpp  NEO_Keyboard.cpp  NEO_Memory.cpp  NEO_Ports.cpp  NEO_Screen.cpp  NEO_String.cpp  NEO_Timer.cpp  NeoosKernel_Main.cpp  PrimShell.cpp  PrimShell.h  boot.asm
